Fixed z-index for number separator

--- a/style.css
+++ b/style.css
@@ -231,6 +231,10 @@ nav {
     align-items: center;
 }
 
+.number-separator{
+    z-index: 1;
+}
+
 .separator {
     width: 0.1rem;
     height: 8rem;
